# track-it-app

./: .gitignore  README.md  package-lock.json  railway.json  railway.toml
trackIt-backend/: Dockerfile  README.md  alembic.ini  nixpacks.toml  package.json  pyproject.toml  requirements.txt  run-server.bat  run_server.py  sql_app.db
trackIt-backend/app/: config.py  main.py
trackIt-backend/app/api/: auth.py  jobs.py
trackIt-backend/app/db/: init_db.py  session.py
trackIt-backend/app/models/: job.py  user.py
trackIt-backend/app/schemas/: job.py  user.py
trackIt-backend/app/services/: auth_service.py  file_service.py
trackIt-backend/config/environments/: development.env  production.env
trackIt-backend/migrations/: env.py
trackIt-backend/migrations/versions/: 3d5f9be0975b_create_users_table.py  be632edb2318_create_users_table.py
trackIt-backend/trackit_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
trackIt-backend/uploads/resumes/: resume_3.docx
trackIt-frontend/: .buildpacks  Dockerfile  Procfile  VISUAL_ENHANCEMENTS_SPEC.md  build.js  eslint.config.js  index.html  nixpacks.toml  package-lock.json  package.json  railway.json  server-simple.cjs  server.cjs  server.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
trackIt-frontend/src/: App.tsx  main.tsx
trackIt-frontend/src/api/: config.ts
trackIt-frontend/src/cmps/: FilterBar.tsx  HowToUseModal.tsx  JobCard.tsx  Navbar.tsx  Toast.tsx
trackIt-frontend/src/context/: AuthContext.tsx  JobContext.tsx  ToastContext.tsx
trackIt-frontend/src/layouts/: MainLayout.tsx
(+9 files in other folders)
