[project]
name = "trackit-backend"
version = "1.0.0"
description = "TrackIt Backend Server"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "python-jose",
    "passlib",
    "python-multipart",
    "alembic"
]
requires-python = ">=3.8"

[project.scripts]
run-server = "app.main:run_server"

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta" 